наработки подключения сервисов

--- a/src/TaskManager.Extensions/TaskManager.Extensions.csproj
+++ b/src/TaskManager.Extensions/TaskManager.Extensions.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\TaskManager.DataSource\TaskManager.DataSource.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="App\" />
+    </ItemGroup>
+
 </Project>
