--- a/src/TaskManager.Extensions/TaskManager.Extensions.csproj
+++ b/src/TaskManager.Extensions/TaskManager.Extensions.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
@@ -18,6 +19,10 @@
 
     <ItemGroup>
       <Folder Include="App\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration.Json" />
     </ItemGroup>
 
 </Project>
