фоновый сервис для завершения задач - основная логика и сопутствующие правки;

--- a/src/TaskManager.BackgroundJob/appsettings.Development.json
+++ b/src/TaskManager.BackgroundJob/appsettings.Development.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "WorkTaskFinishOptions": {
     "IsActive": "true",
+    "WorkTaskLifeTime": "00:02:00",
     "Period": "00:00:10"
   }
 }
