--- a/src/TaskManager.BackgroundJob/appsettings.Development.json
+++ b/src/TaskManager.BackgroundJob/appsettings.Development.json
@@ -8,6 +8,6 @@
   "WorkTaskFinishOptions": {
     "IsActive": "true",
     "WorkTaskLifeTime": "00:02:00",
-    "Period": "00:00:10"
+    "ExecutionPeriod": "00:00:05"
   }
 }
