--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /src/TaskManager.Api/obj
 /src/TaskManager.Api/bin
 /src/TaskManager.Api/.idea
+/src/TaskManager.Api/logs
 
 /src/TaskManager.BackgroundJob/obj
 /src/TaskManager.BackgroundJob/bin
