настроил мидлвар для авторизации

--- a/src/TaskManager.Api/appsettings.Development.json
+++ b/src/TaskManager.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthorizationOptions": {
+    "Token": "e4e48304-28aa-479e-b51a-38bf0bbe9b5c"
   }
 }
