--- a/src/TaskManager.Api/appsettings.Production.json
+++ b/src/TaskManager.Api/appsettings.Production.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthorizationOptions": {
+    "Token": "7633e286-3515-44ec-88d9-39502fc7d307"
   }
 }
