добавил фоновую службу старта задач

--- a/src/TaskManager.BackgroundJob/appsettings.Development.json
+++ b/src/TaskManager.BackgroundJob/appsettings.Development.json
@@ -10,5 +10,9 @@
     "IsActive": "true",
     "WorkTaskLifeTime": "00:02:00",
     "ExecutionPeriod": "00:00:05"
+  },
+  "WorkTaskStartOptions": {
+    "IsActive": "true",
+    "ExecutionPeriod": "00:00:05"
   }
 }
